hard-gists/1610922/run.log
=== Docker Run Log for 1610922 ===
Started at: Mi 29. Okt 12:21:15 CET 2025

[2025-10-29 12:21:15] START: Running container for 1610922
[2025-10-29 12:21:15] SUCCESS: Container 16e949f1ed9699ea692a31961f19cb88bf43c44826c4e5703d02eaab7f8d86f5 started for 1610922
=== Container logs for 1610922 ===
  File "/snippet.py", line 42
    print p_obj(coef_)  # should go down
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1610922 ===
[2025-10-29 12:21:17] INFO: Container 16e949f1ed9699ea692a31961f19cb88bf43c44826c4e5703d02eaab7f8d86f5 has stopped
